--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "build": "tsc",
+    "seed": "ts-node-dev src/seed.ts",
     "start": "node dist/index.js"
   },
   "keywords": [],
@@ -16,12 +17,14 @@
   "dependencies": {
     "@types/express": "^5.0.4",
     "@types/mongoose": "^5.11.96",
+    "@types/uuid": "^10.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^5.1.0",
     "mongoose": "^8.19.2",
     "socket.io": "^4.8.1",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "uuid": "^13.0.0"
   }
 }
