--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -10,15 +10,19 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.34.0",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.3",
     "@types/axios": "^0.9.36",
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.548.0",
+    "motion": "^12.23.24",
     "next": "16.0.0",
-    "react": "19.2.0",
+    "next-themes": "^0.4.6",
+    "react": "^19.2.0",
     "react-dom": "19.2.0",
+    "react-hot-toast": "^2.6.0",
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.3.1"
   },
