--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@clerk/clerk-sdk-node": "^4.13.23",
     "@types/express": "^5.0.4",
     "@types/mongoose": "^5.11.96",
     "@types/uuid": "^10.0.0",
